--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-
+	<p>
+		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam inventore deleniti exercitationem veritatis autem, maxime perspiciatis ex ipsum saepe optio quidem debitis maiores repellat pariatur ut illo ab quae sint.
+	</p>
 </body>
 </html>
